force-app/main/default/objects/TFA_Look_Up_Request__c/TFA_Look_Up_Request__c.object-meta.xml
<CustomObject>
    <label>Deep Dive Request</label>
    <nameField>
        <label>Deep Dive Requests</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deep Dive Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>