force-app/main/default/objects/TFA_Look_Up_Request__c/fields/AG_Champion__c.field-meta.xml
<CustomField>
    <fullName>AG_Champion__c</fullName>
    <label>AG Champion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adam Locke</fullName>
            </value>
            <value>
                <fullName>Eric Jorgenson</fullName>
            </value>
            <value>
                <fullName>Jack Kosmicki</fullName>
            </value>
            <value>
                <fullName>Manuel Ferreira</fullName>
            </value>
            <value>
                <fullName>Parsa Akbari</fullName>
            </value>
            <value>
                <fullName>Suganthi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>