force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <label>Cohort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>