force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>