force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Gene__c.field-meta.xml
<CustomField>
    <fullName>Gene__c</fullName>
    <label>Gene</label>
    <length>255</length>
    <type>Text</type>
</CustomField>