force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Sharepoint URL</label>
    <type>Url</type>
</CustomField>