force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Link_to_deck__c.field-meta.xml
<CustomField>
    <fullName>Link_to_deck__c</fullName>
    <label>Link to deck</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>