force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <label>Outcome</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>