force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <label>Requestor</label>
    <type>TextArea</type>
</CustomField>