force-app/main/default/objects/TFA_Look_Up_Request__c/fields/RGC_Champion__c.field-meta.xml
<CustomField>
    <fullName>RGC_Champion__c</fullName>
    <label>RGC Champion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>