force-app/main/default/objects/TFA_Look_Up_Request__c/fields/RGC_request__c.field-meta.xml
<CustomField>
    <fullName>RGC_request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RGC request</label>
    <type>Checkbox</type>
</CustomField>