force-app/main/default/objects/TFA_Look_Up_Request__c/fields/TAG__c.field-meta.xml
<CustomField>
    <fullName>TAG__c</fullName>
    <label>TAG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TAG</valueSetName>
    </valueSet>
</CustomField>