force-app/main/default/objects/TFA_Look_Up_Request__c/fields/TAG_Champion__c.field-meta.xml
<CustomField>
    <fullName>TAG_Champion__c</fullName>
    <label>TAG Champion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eric Jorgenson</fullName>
            </value>
            <value>
                <fullName>Giovanni Coppola</fullName>
            </value>
            <value>
                <fullName>Julie Horowitz</fullName>
            </value>
            <value>
                <fullName>Luca Lotta</fullName>
            </value>
            <value>
                <fullName>Niek Verweij</fullName>
            </value>
            <value>
                <fullName>Olu Sosina</fullName>
            </value>
            <value>
                <fullName>Parsa Akbari</fullName>
            </value>
            <value>
                <fullName>Suganthi Balasubramanian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>