force-app/main/default/objects/TFA_Look_Up_Request__c/fields/TAG_Project__c.field-meta.xml
<CustomField>
    <fullName>TAG_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TAG Project</label>
    <referenceTo>TAG_Project__c</referenceTo>
    <relationshipName>TFA_Look_Up_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>