force-app/main/default/objects/TFA_Look_Up_Request__c/fields/TFA__c.field-meta.xml
<CustomField>
    <fullName>TFA__c</fullName>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TFA</valueSetName>
    </valueSet>
</CustomField>