force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Therapeutic_Area__c</fullName>
    <label>Therapeutic Area [LEGACY]</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aging</fullName>
            </value>
            <value>
                <fullName>CV/F</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>Immune</fullName>
            </value>
            <value>
                <fullName>M&amp;M</fullName>
            </value>
            <value>
                <fullName>Neuro</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>SD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>