force-app/main/default/objects/TFA_Look_Up_Request__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Existing Therapeutic: post-IPA</fullName>
            </value>
            <value>
                <fullName>Existing Therapeutic: pre-IPA</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Sr Mgmt</fullName>
            </value>
            <value>
                <fullName>Target Nomination</fullName>
            </value>
            <value>
                <fullName>Clinical</fullName>
                <isActive>false</isActive>
                <label>Existing Therapeutic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>