force-app/main/default/objects/TFA_Look_Up_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TAG__c</columns>
    <columns>TFA__c</columns>
    <columns>Date_of_Request__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Requestor__c</columns>
    <columns>Stage__c</columns>
    <columns>RGC_Champion__c</columns>
    <columns>Date_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>