force-app/main/default/objects/TFA_Look_Up_Request__c/listViews/Neuro_Ophthal_requests.listView-meta.xml
<ListView>
    <fullName>Neuro_Ophthal_requests</fullName>
    <columns>NAME</columns>
    <columns>TAG__c</columns>
    <columns>TFA__c</columns>
    <columns>Date_of_Request__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Requestor__c</columns>
    <columns>Link_to_deck__c</columns>
    <columns>Stage__c</columns>
    <columns>Date_Completed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TAG__c</field>
        <operation>contains</operation>
        <value>&quot;Neuroscience, Ophthalmology &amp; Auditory&quot;</value>
    </filters>
    <label>Neuro/Ophthal requests</label>
</ListView>